syntax = "proto3";
package slot;
option go_package = "./proto";


message Strip {
 repeated sfixed32 strip = 1;
}

message AllLineWin {
 float win = 1;
 repeated sfixed32 position = 2;
}

message ScatterWin {
 float win = 1;
 repeated sfixed32 position = 2;
 sfixed32 bonus = 3;
 float bonusParam = 4;
}

message BaseResult {
 float win = 1;
 float totalWin = 2;
 repeated sfixed32 up = 3;
 repeated Strip reel = 4;
 repeated sfixed32 dn = 5;
 repeated AllLineWin lineWins = 6;
 repeated ScatterWin scatterWins = 7;
}


